<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_5"
    tools:context=".ui.main.my.QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_back" />

        <TextView
            android:id="@+id/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Heading3"
            android:textColor="@color/gray_90"
            android:text="@string/자주_묻는_질문" />

    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/biscay_5">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="98dp"
            android:layout_marginTop="29dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_question_mypage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Body2_700"
            android:layout_marginTop="129dp"
            android:textColor="@color/gray_70"
            android:text="@string/자주_묻는_질문" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body1_700"
            android:textColor="@color/gray_90"
            android:text="@string/싱크_이용_방법" />

        <ImageView
            android:id="@+id/up_down"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_down"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_10" />

    <LinearLayout
        android:id="@+id/ask1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:background="@color/gray_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:text="@string/싱크에_오신" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:text="@string/싱크는_외국인과" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:layout_marginTop="20dp"
            android:text="@string/먼저_싱크에" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:text="@string/싱크는_모임" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:layout_marginTop="20dp"
            android:textColor="@color/gray_90"
            android:text="@string/원하는_싱크가" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:text="@string/하고_싶은_콘텐츠" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:layout_marginTop="20dp"
            android:textColor="@color/gray_90"
            android:text="@string/한국생활에_대한" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:text="@string/커뮤니티에서_한국" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body1_700"
            android:textColor="@color/gray_90"
            android:text="@string/온보딩_설정_변경" />

        <ImageView
            android:id="@+id/up_down2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_down"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_10" />

    <LinearLayout
        android:id="@+id/ask2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:background="@color/gray_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Body3_400"
            android:textColor="@color/gray_90"
            android:text="@string/마이페이지_내프로필" />

    </LinearLayout>

</LinearLayout>