<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_5"
    tools:context=".ui.open.OpenRoutineFragment">

    <LinearLayout
        android:id="@+id/explain_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@drawable/progressbar5" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_cancle" />

        <TextView
            android:id="@+id/explain1"
            style="@style/Heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/routine_explain1"
            android:textColor="@color/gray_90" />

        <TextView
            android:id="@+id/explain2"
            style="@style/Heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/routine_explain2"
            android:textColor="@color/gray_90" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/explain_layout">

        <TextView
            android:id="@+id/explain3"
            style="@style/Body1_700"
            android:layout_marginStart="14dp"
            android:text="@string/routine_explain2"
            android:textColor="@color/gray_90" />

        <LinearLayout
            android:id="@+id/box_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text1"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/월" />

            <TextView
                android:id="@+id/date_text2"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/화" />

            <TextView
                android:id="@+id/date_text3"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/수" />

            <TextView
                android:id="@+id/date_text4"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/목" />

            <TextView
                android:id="@+id/date_text5"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/금" />

            <TextView
                android:id="@+id/date_text6"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/토" />

            <TextView
                android:id="@+id/date_text7"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_day_selector"
                android:paddingHorizontal="11dp"
                android:paddingVertical="8dp"
                android:text="@string/일" />
        </LinearLayout>

        <TextView
            android:id="@+id/explain4"
            style="@style/Body1_700"
            android:layout_marginStart="14dp"
            android:layout_marginTop="36dp"
            android:text="@string/routine_explain2"
            android:textColor="@color/gray_90" />

        <LinearLayout
            android:id="@+id/box_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_clock_gray" />

            <TextView
                android:id="@+id/time_text"
                style="@style/Body1_400"
                android:layout_marginStart="10dp"
                android:text="@string/select_time" />

        </LinearLayout>


    </LinearLayout>


    <!--버튼-->
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/before_btn"
            style="@style/Body1_400"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_10"
            android:gravity="center"
            android:text="@string/before"
            android:textColor="@color/gray_70" />

        <TextView
            android:id="@+id/done_btn"
            style="@style/Body1_400"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_10"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/gray_70"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>