<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="328dp"
    android:layout_height="170dp"
    android:background="@drawable/bg_btn_box"
    android:padding="26dp"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_logout"
        style="@style/Body1_700"
        android:textColor="@color/gray_90"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_message"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        style="@style/Body2_400"
        android:textColor="@color/gray_50"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_10"
            style="@style/Body1_400"
            android:textColor="@color/gray_70"
            android:gravity="center"
            android:text="@string/no" />

        <TextView
            android:id="@+id/done_btn"
            style="@style/Body1_700"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_default"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>