<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="328dp"
    android:layout_height="170dp"
    android:background="@drawable/bg_btn_box"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="26dp">

    <TextView
        style="@style/Body1_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/check_open_sync"
        android:textColor="@color/gray_90" />

    <TextView
        style="@style/Body2_400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/explain_check_open_sync"
        android:textColor="@color/gray_50" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_btn"
            style="@style/Body1_400"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_10"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/gray_70" />

        <TextView
            android:id="@+id/open_btn"
            style="@style/Body1_700"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_default"
            android:gravity="center"
            android:text="@string/open"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>